Ifruit added(phone) fixed some bugs!

--- a/plugin.yml
+++ b/plugin.yml
@@ -8,4 +8,6 @@ commands:
         description: sucksdick
     createstore:
         description: sucksdick
+    createphone:
+        description: sucksdick
 depend: [Vault,RemoteEntities,ProtocolLib]
